# Gaussian-solver

./: CMakeLists.txt  README.md  system_generator.py
.github/workflows/: ci.yml
github/workflows/: ci.yml
include/: gauss.hpp
scripts/: build.sh  test.sh
src/: gauss.cpp  main.cpp
test/: unit_tests.cpp
